--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -25,8 +25,19 @@
 						<li class="page"><a href="/pages.html">页面</a></li>
 						<li class="category"><a href="/categories.html">目录</a></li>
 						<li class="tag"><a href="/tags.html">标签</a></li>
-						<li class="forkme"><div><iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=plusjade&repo=jekyll-bootstrap&type=fork&count=true"
-									allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe></div></li>
+						<li class="about"><a href="/about.html">about</a></li>
+            <li class="search">
+              <form method="get" action="http://www.google.com/search" target="google_window">
+            	<div>	
+            	  <input type="text" value="Search..." name="query" id="search-box" onfocus="if (this.value == 'Search...') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Search...';}">
+            		<input type="submit" name=”btnG” id="search-submit" value="Go">
+            	</div>
+              <input type="hidden" name="ie" value="UTF-8" />
+              <input type="hidden" name="oe" value="UTF-8" />
+            	<input type="hidden" name="hl" value="zh-CN" />
+            	<input type="hidden" name="domains" value="{{ site.production_url }}" />
+            	<input type="hidden" name="sitesearch" value="{{ site.production_url }}" />
+            </li>
 					</ul>
 				</nav>
 			</div><!-- unit-inner -->
