--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -55,18 +55,28 @@
 		<div class="unit-foot">
 			<div class="unit-inner unit-foot-inner">
 				<div class="misc vcard">
-					<h4>about</h4>
+					<h4>我的信息</h4>
 					<ul>
 						<li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li>
 						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
+						<!--
 						<li class="twitter"><a href="http://twitter.com/{{ site.author.twitter }}/" rel="me">twitter.com/{{ site.author.twitter }}</a></li>
 						<li class="rss"><a href="http://feeds.feedburner.com/{{ site.author.feedname }}">Subscribe to RSS Feed</a></li>
+						-->
 					</ul>
 				</div><!-- misc -->
+				<!--
 				<p class="licence">
 					Theme: <a href="http://layouts-the.me">the_minimum</a> based on <a href="http://jekyllbootstrap.com/">Jekyll-bootstrap</a>.<br>
 					Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>.
 				</p>
+				-->
+				<p>&copy; rookiecalf 2014 
+          		基于 <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+          		和 <a href="http://github.com/jekyllbootstrap/theme-the-program" target="_blank">the-program Bootstrap</a> 构建, 
+          		源码托管在 <a href="https://github.com/rookiecalf/rookiecalf.github.com" target="_blank">github</a> 上
+        		</p>
+
 			</div><!-- unit-foot-inner -->
 		</div><!-- unit-foot -->
 	</footer>
