修改css样式，调整上下左右分栏
修改css样式，调整上下左右分栏，将版权信息移到底部

--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -71,15 +71,20 @@
 					Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>.
 				</p>
 				-->
+			</div><!-- unit-foot-inner -->
+		</div><!-- unit-foot -->
+	</footer>
+
+	<rookiecalf class="rookiecalf-bottom">
+				<center>
 				<p>&copy; rookiecalf 2014 
           		基于 <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           		和 <a href="http://github.com/jekyllbootstrap/theme-the-program" target="_blank">the-program Bootstrap</a> 构建, 
           		源码托管在 <a href="https://github.com/rookiecalf/rookiecalf.github.com" target="_blank">github</a> 上
         		</p>
+        		</center>
+	</rookiecalf>
 
-			</div><!-- unit-foot-inner -->
-		</div><!-- unit-foot -->
-	</footer>
 </div><!-- page -->
 <script>
 	(function(d, s) {
