添加侧边栏代码，增加欢迎词，访问统计

--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -55,16 +55,51 @@
 		<div class="unit-foot">
 			<div class="unit-inner unit-foot-inner">
 				<div class="misc vcard">
-					<h4>我的信息</h4>
+					
 					<ul>
+						<a href="http://rookiecalf.github.io" target="_blank">
+						<img alt = "" src = "http://rookiecalf.github.io/assets/images/common/rookiecalfme.jpg"> </a>
+
+						<p>这里是rookiecalf的个人Blog，欢迎访问、订阅和留言！</p>
+
+						<a href="http://rookiecalf.github.io" target="_blank">
+						<img alt = "" src = "http://rookiecalf.github.io/assets/images/common/youxiang.png"> </a>
+						
+						<!--
 						<li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li>
+
 						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
+						-->
 						<!--
 						<li class="twitter"><a href="http://twitter.com/{{ site.author.twitter }}/" rel="me">twitter.com/{{ site.author.twitter }}</a></li>
 						<li class="rss"><a href="http://feeds.feedburner.com/{{ site.author.feedname }}">Subscribe to RSS Feed</a></li>
 						-->
-						欢迎分享：<div class="bdsharebuttonbox"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
+						<br>
+						欢迎分享：
+						<div class="bdsharebuttonbox"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a></div>
 						<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+						<br>
+
+						<!-- Start of StatCounter Code for Default Guide -->
+
+						<script type="text/javascript">
+						var sc_project=9623308; 
+						var sc_invisible=0; 
+						var sc_security="beaeca41"; 
+						var scJsHost = (("https:" == document.location.protocol) ?
+						"https://secure." : "http://www.");
+						document.write("<sc"+"ript type='text/javascript' src='" +
+						scJsHost+
+						"statcounter.com/counter/counter.js'></"+"script>");
+						</script>
+						<noscript><div class="statcounter"><a title="web statistics"
+						href="http://statcounter.com/" target="_blank"><img
+						class="statcounter"
+						src="http://c.statcounter.com/9623308/0/beaeca41/0/"
+						alt="web statistics"></a></div></noscript>
+
+						<!-- End of StatCounter Code for Default Guide -->
+
 					</ul>
 				</div><!-- misc -->
 				<!--
