--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -96,7 +96,7 @@
 
     <footer id="bottom">
       <p align="center">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-        with help from and <a href="http://www.github.com/" target="_blank" rel="nofollow">Github</a>
+        with help from <a href="http://www.github.com/" target="_blank" rel="nofollow">Github</a>
 		, <a href="http://jekyllbootstrap.com" target="_blank" rel="nofollow" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
         , <a href="http://twitter.github.com/bootstrap/" target="_blank" rel="nofollow">Twitter Bootstrap</a>
 		and <a href="https://github.com/liberize/liberize.github.com/" target="_blank" rel="nofollow">Liberize</a>
